top elements correctly aligned

--- a/style.css
+++ b/style.css
@@ -6,14 +6,20 @@ body {
     text-align: center;
 
 }
-
-#title {
+.header-1 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100px; 
+    padding: 0 20px; 
+}
+.title {
     display: flex;
     padding-top: 10px;
     padding-left: 125px;
 }
 
-#nav-1{
+.nav-1{
     padding-top: 5px;
     text-align: right;
     padding-right: 125px;
